# ASTE404_HW7

./: CMakeLists.txt  Doxyfile
html/: _c_make_c_compiler_id_8c.html  _c_make_c_x_x_compiler_id_8cpp.html  _c_o_n_t_r_i_b_u_t_i_n_g_8md.html  _formulas.tex  _formulas_dark.tex  _r_e_a_d_m_e_8md.html  actions_8md.html  advanced_8md.html  annotated.html  assertions_8md.html  class__vec3.html  class_bar_environment-members.html  class_bar_environment.html  class_base-members.html  class_base.html  class_biggest_int_convertible-members.html  class_biggest_int_convertible.html  class_child_class_with_stream_operator.html  class_child_class_without_stream_operator.html  class_comment_test.html  class_common_test-members.html  class_common_test.html  class_construct_from_t-members.html  class_construct_from_t.html  class_container_test-members.html  class_container_test.html  class_conversion_helper_base.html  class_conversion_helper_derived.html  class_counter-members.html  class_counter.html  class_custom_function_naming_test.html  class_custom_functor_naming_test.html  class_custom_integer_naming_test.html  class_custom_lambda_naming_test.html  class_custom_struct_naming_test.html  class_derived_test-members.html  class_derived_test.html  class_detect_not_instantiated_test-members.html  class_detect_not_instantiated_test.html  class_detect_not_instantiated_types_test-members.html  (+1520 more)
latex/: _c_make_c_compiler_id_8c.tex  _c_make_c_x_x_compiler_id_8cpp.tex  _c_o_n_t_r_i_b_u_t_i_n_g_8md.tex  _r_e_a_d_m_e_8md.tex  annotated.tex  class__vec3.tex  class_bar_environment.tex  (+885 more)
(+103 files in other folders)
